// Code generated by taxonomy-gen from taxonomy YAML. DO NOT EDIT.
// Source: taxonomy/core.yaml
// Taxonomy Version: 3.0.0
// Generated at: 2026-01-23T17:09:14Z

syntax = "proto3";

package taxonomy;

option go_package = "github.com/zero-day-ai/sdk/api/gen/taxonomypb";

// ==================== ENUMS ====================

// CoreNodeType enumerates all core (validated) node types.
// Custom types use string directly, not this enum.
enum CoreNodeType {
  CORE_NODE_TYPE_UNSPECIFIED = 0;
  CORE_NODE_TYPE_MISSION = 1;
  CORE_NODE_TYPE_MISSION_RUN = 2;
  CORE_NODE_TYPE_AGENT_RUN = 3;
  CORE_NODE_TYPE_TOOL_EXECUTION = 4;
  CORE_NODE_TYPE_LLM_CALL = 5;
  CORE_NODE_TYPE_DOMAIN = 6;
  CORE_NODE_TYPE_SUBDOMAIN = 7;
  CORE_NODE_TYPE_HOST = 8;
  CORE_NODE_TYPE_PORT = 9;
  CORE_NODE_TYPE_SERVICE = 10;
  CORE_NODE_TYPE_ENDPOINT = 11;
  CORE_NODE_TYPE_TECHNOLOGY = 12;
  CORE_NODE_TYPE_CERTIFICATE = 13;
  CORE_NODE_TYPE_FINDING = 14;
  CORE_NODE_TYPE_EVIDENCE = 15;
  CORE_NODE_TYPE_TECHNIQUE = 16;
}

// CoreRelationType enumerates all core relationship types.
enum CoreRelationType {
  CORE_RELATION_TYPE_UNSPECIFIED = 0;
  CORE_RELATION_TYPE_HAS_RUN = 1;
  CORE_RELATION_TYPE_CONTAINS_AGENT_RUN = 2;
  CORE_RELATION_TYPE_EXECUTED_TOOL = 3;
  CORE_RELATION_TYPE_MADE_CALL = 4;
  CORE_RELATION_TYPE_DELEGATED_TO = 5;
  CORE_RELATION_TYPE_HAS_SUBDOMAIN = 6;
  CORE_RELATION_TYPE_RESOLVES_TO = 7;
  CORE_RELATION_TYPE_HAS_PORT = 8;
  CORE_RELATION_TYPE_RUNS_SERVICE = 9;
  CORE_RELATION_TYPE_HAS_ENDPOINT = 10;
  CORE_RELATION_TYPE_USES_TECHNOLOGY = 11;
  CORE_RELATION_TYPE_SERVES_CERTIFICATE = 12;
  CORE_RELATION_TYPE_D_I_S_C_O_V_E_R_E_D = 13;
  CORE_RELATION_TYPE_A_F_F_E_C_T_S = 14;
  CORE_RELATION_TYPE_HAS_EVIDENCE = 15;
  CORE_RELATION_TYPE_USES_TECHNIQUE = 16;
  CORE_RELATION_TYPE_LEADS_TO = 17;
}

// ==================== VALUE TYPES ====================

// Value represents a dynamic property value.
message Value {
  oneof kind {
    string string_value = 1;
    int64 int_value = 2;
    double double_value = 3;
    bool bool_value = 4;
    bytes bytes_value = 5;
    int64 timestamp_value = 6;
    ListValue list_value = 7;
    MapValue map_value = 8;
  }
}

message ListValue {
  repeated Value values = 1;
}

message MapValue {
  map<string, Value> fields = 1;
}

// ==================== CORE MESSAGES ====================

// GraphNode is the generic node type that can represent any taxonomy node.
// Use typed messages (Host, Port, etc.) for compile-time safety,
// or GraphNode for dynamic/custom types.
message GraphNode {
  // Identity
  string id = 1;
  string type = 2;  // String to allow custom types

  // Properties (flexible key-value)
  map<string, Value> properties = 3;

  // Parent reference (set by BelongsTo)
  optional string parent_id = 4;
  optional string parent_type = 5;
  optional string parent_relationship = 6;

  // Scoping (injected by harness - agents never set these)
  string mission_id = 10;
  string mission_run_id = 11;
  string agent_run_id = 12;
  string discovered_by = 13;
  int64 discovered_at = 14;

  // Timestamps
  int64 created_at = 20;
  int64 updated_at = 21;
}

// Relationship represents a connection between two nodes.
message Relationship {
  string id = 1;
  string from_id = 2;
  string to_id = 3;
  string type = 4;  // String to allow custom types

  map<string, Value> properties = 5;
  double weight = 6;

  // Scoping
  string mission_id = 10;
  string mission_run_id = 11;

  // Timestamps
  int64 created_at = 20;
}

// ==================== TYPED NODE MESSAGES ====================

// Mission represents: Top-level security assessment mission
message Mission {
  string id = 1;

  // Properties
  string name = 2;
  string target = 3;
  optional string status = 4;
  optional string description = 5;
  optional int64 started_at = 6;
  optional int64 completed_at = 7;
}

// MissionRun represents: Single execution of a mission pipeline
message MissionRun {
  string id = 1;

  // Properties
  int32 run_number = 2;
  optional string status = 3;
  optional int64 started_at = 4;
  optional int64 completed_at = 5;

  // Parent reference
  string parent_mission_id = 6;
}

// AgentRun represents: Single execution of an agent within a mission
message AgentRun {
  string id = 1;

  // Properties
  string agent_name = 2;
  optional string status = 3;
  optional int64 started_at = 4;
  optional int64 completed_at = 5;
  optional string error_message = 6;

  // Parent reference
  string parent_mission_run_id = 7;
}

// ToolExecution represents: Execution of a security tool
message ToolExecution {
  string id = 1;

  // Properties
  string tool_name = 2;
  optional string command = 3;
  optional int32 exit_code = 4;
  optional int64 started_at = 5;
  optional int64 completed_at = 6;
  optional string stdout = 7;
  optional string stderr = 8;

  // Parent reference
  string parent_agent_run_id = 9;
}

// LlmCall represents: Call to a large language model
message LlmCall {
  string id = 1;

  // Properties
  string model = 2;
  optional string provider = 3;
  optional string slot_name = 4;
  optional int32 prompt_tokens = 5;
  optional int32 completion_tokens = 6;
  optional int32 total_tokens = 7;
  optional int64 latency_ms = 8;
  optional int64 started_at = 9;

  // Parent reference
  string parent_agent_run_id = 10;
}

// Domain represents: Root domain entity (e.g., example.com)
message Domain {
  string id = 1;

  // Properties
  string name = 2;
  optional string registrar = 3;
  optional int64 created_date = 4;
  optional int64 expiry_date = 5;
  optional string nameservers = 6;
}

// Subdomain represents: Subdomain under a root domain
message Subdomain {
  string id = 1;

  // Properties
  string name = 2;
  optional string full_name = 3;

  // Parent reference
  string parent_domain_id = 4;
}

// Host represents: IP address or hostname
message Host {
  string id = 1;

  // Properties
  optional string ip = 2;
  optional string hostname = 3;
  optional string os = 4;
  optional string os_version = 5;
  optional string mac_address = 6;
  optional string state = 7;
}

// Port represents: Network port on a host
message Port {
  string id = 1;

  // Properties
  int32 number = 2;
  string protocol = 3;
  optional string state = 4;
  optional string reason = 5;

  // Parent reference
  string parent_host_id = 6;
}

// Service represents: Service running on a port
message Service {
  string id = 1;

  // Properties
  string name = 2;
  optional string product = 3;
  optional string version = 4;
  optional string extra_info = 5;
  optional string banner = 6;
  optional string cpe = 7;

  // Parent reference
  string parent_port_id = 8;
}

// Endpoint represents: Web endpoint or URL
message Endpoint {
  string id = 1;

  // Properties
  string url = 2;
  optional string method = 3;
  optional int32 status_code = 4;
  optional string content_type = 5;
  optional int64 content_length = 6;
  optional string title = 7;

  // Parent reference
  string parent_service_id = 8;
}

// Technology represents: Technology/framework detected
message Technology {
  string id = 1;

  // Properties
  string name = 2;
  optional string version = 3;
  optional string category = 4;
  optional int32 confidence = 5;
  optional string cpe = 6;
}

// Certificate represents: TLS/SSL certificate
message Certificate {
  string id = 1;

  // Properties
  optional string subject = 2;
  optional string issuer = 3;
  optional string serial_number = 4;
  optional int64 not_before = 5;
  optional int64 not_after = 6;
  optional string fingerprint_sha256 = 7;
  optional string san = 8;
}

// Finding represents: Security vulnerability or issue
message Finding {
  string id = 1;

  // Properties
  string title = 2;
  optional string description = 3;
  string severity = 4;
  optional double confidence = 5;
  optional string category = 6;
  optional string subcategory = 7;
  optional string remediation = 8;
  optional double cvss_score = 9;
  optional string cve_ids = 10;
  optional string cwe_ids = 11;
}

// Evidence represents: Supporting evidence for a finding
message Evidence {
  string id = 1;

  // Properties
  string type = 2;
  optional string content = 3;
  optional string content_type = 4;
  optional string url = 5;

  // Parent reference
  string parent_finding_id = 6;
}

// Technique represents: Attack technique (MITRE/Gibson)
message Technique {
  string id = 1;

  // Properties
  string technique_id = 2;
  string name = 3;
  optional string taxonomy = 4;
  optional string tactic = 5;
  optional string description = 6;
  optional string url = 7;
}
